k8s/client-daployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: cs21-peer-mentor_client
          image: cs21-peer-mentor_client
          ports:
            - containerPort: 3000
