k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: cs21-peer-mentor-client
          image: thetkpark/cs21-peer-mentor-client:b5d0b5a1b767036a6c13e056fb9885489182fa8d
          ports:
            - containerPort: 3000
