k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      volumes:
        - name: gcs-service-account-json
          secret:
            secretName: gcs-service-account
      containers:
        - name: cs21-peer-mentor-server
          image: thetkpark/cs21-peer-mentor-server
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: gcs-service-account-json
              mountPath: /etc/gcs
              readOnly: true
