k8s/socket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: socket
  template:
    metadata:
      labels:
        component: socket
    spec:
      containers:
        - name: cs21-peer-mentor-socket
          image: thetkpark/cs21-peer-mentor-socket
          ports:
            - containerPort: 5000
