k8s/socker-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: socket-cluster-ip-service
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  selector:
    component: socket
  ports:
    - port: 5000
      targetPort: 5000
